# Team_13

./: CMakeLists.txt  Doxyfile  ReadMe.md  population.h  read_fasta.cpp
Tests/: test_multibinomial.cpp  test_simulation migration.cpp  test_simulation_migration.cpp
data_base/: test_bad.fa
database/: test_bad.fa
date_base/: mitogene.fa
src/: binomial.cpp  main.cpp  main_test_simulation.cpp  migration.cpp  migration.h  multibinomial.cpp  multibinomial.h  population.cpp  population.h  read_fasta.cpp  read_fasta.h  simulation.cpp  simulation.h  test_main.cpp  test_multibinomial  test_multibinomial.cpp  test_simulation.cpp  test_simulation_migration.cpp
test/: test_main.cpp  test_multibinomial.cpp  test_readfasta.cpp  test_simulation_migration.cpp
